--- a/oldindex.html
+++ b/oldindex.html
@@ -58,7 +58,7 @@ http://www.templatemo.com/tm-507-victory
 		}
 
 		.grid-item {
-			background-color:#5CDB94;
+			background-color:#C39482;
 
 			padding: 150px;
 			font-size: 30px;
