--- a/department.html
+++ b/department.html
@@ -27,7 +27,7 @@
 
 
 <div class="row">
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="AnuWesCO.html">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="Art&Sci.html">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="LeBowColl.html">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="CenterForCivic.html">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="schOfEntrpreneurship.html">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="collegeOfCCI.html">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="collegeOfEngineering.html">
@@ -97,7 +97,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="DornsifeSchOfPublicHealth.html">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="GoodwinCollOfProFStudies.html">
@@ -117,7 +117,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="miscellaneous.html">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="nursing&HealthProfessions.html">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="pennoniHonorsCollege.html">
@@ -148,7 +148,7 @@
                 </div>
     
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
     <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="SchOfBiomedEngr,Sci&Hlth.html">
@@ -158,7 +158,7 @@
                     </div>
                 </div>
   </div>
-  <div class="column" style="background-color:powderBlue;">
+  <div class="column" style="background-color:C39482;">
    <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="service-item">
                         <a href="schoolOfEducation.html">
